# superstring

./: README.md  REMARKS.md  short.txt  words2.txt  words3.txt  words4.txt  words5.txt
genetic/: build.sbt
genetic/src/main/scala/: Genetic.scala
genetic/src/main/scala/superstring/: Genetic.scala  Solver.scala
greedy/: CMakeLists.txt  main.cpp  suffix_array.cpp  suffix_array.h  suffix_ops.cpp  suffix_ops.h
greedy/test/: test_longest_suffix.cpp  test_suffix_array.cpp  test_suffix_map.cpp
